# unicity-bridge

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.github/workflows/: publish-github-packages.yml
bridge-core/: package.json
bridge-plugin-tron-usdt/: DEMO.md  README.md  package-lock.json  package.json
bridge-plugin-tron-usdt/demo/: bridge-back-e2e.ts  e2e.ts  tron.ts
bridge-plugin-tron-usdt/lib/: TronRpcClient.d.ts  TronRpcClient.js  TronUsdtLockJustification.d.ts  TronUsdtLockJustification.js  TronUsdtMintJustificationVerifier.d.ts  TronUsdtMintJustificationVerifier.js  config.d.ts  config.js  hex.d.ts  hex.js  identifiers.d.ts  identifiers.js  index.d.ts  index.js  lock-event.d.ts  lock-event.js  tron-address.d.ts  tron-address.js  value.d.ts  value.js
bridge-plugin-tron-usdt/lib/bridge-back/: abi.d.ts  abi.js  cbor.d.ts  cbor.js  derivations.d.ts  derivations.js  index.js
bridge-plugin-tron-usdt/lib/cli/: main.js  scenario.d.ts  scenario.js
bridge-plugin-tron-usdt/manifests/: bridges.nile.json
bridge-plugin-tron-usdt/src/: TronRpcClient.ts  TronUsdtMintJustificationVerifier.ts  config.ts  hex.ts  identifiers.ts  index.ts  tron-address.ts
bridge-plugin-tron-usdt/src/bridge-back/: abi.ts  burn.ts  cbor.ts  derivations.ts
bridge-plugin-tron-usdt/src/cli/: scenario.ts
bridge-plugin-tron-usdt/src/wallet/: explorer.ts  facade.ts  index.ts  manifest.ts  manifests.ts  providers.ts  registry.ts  return-client.ts  source-adapter.ts  tron-signer.ts
bridge-plugin-tron-usdt/test/: bridge-back.test.ts  burn.test.ts  explorer.test.ts  facade.test.ts  providers.test.ts
bridge-vectors/: .gitignore  README.md
bridge-vectors/accumulator/: accumulator-00.json
bridge-vectors/config/: config-00.json
bridge-vectors/deployment/: nile-usdt.json
bridge-vectors/lock/: lock-00.json
bridge-vectors/nullifier/: nullifier-00.json
bridge-vectors/proof/: b1-groth16.json  live-testnet2-certified.json
bridge-vectors/public/: public-00.json
bridge-vectors/reason/: reason-00.json
bridge-vectors/token/: README.md  token-00.json  token-01.json  token-02.json
contracts/tron/: hardhat.config.js  package-lock.json  package.json
contracts/tron/cache/: solidity-files-cache.json
contracts/tron/contracts/: BridgeEncoding.sol  IProofVerifier.sol  UnicityBridgeVault.sol  UnicityLock.sol
contracts/tron/contracts/test/: EncodingHarness.sol  MockProofVerifier.sol  MockTRC20.sol  MockTRC20Variants.sol
contracts/tron/contracts/verifier/: ISP1Verifier.sol
contracts/tron/scripts/: deploy-nile.js  fulfill-run.js  fulfill-smoke.js  mock-smoke.js  relayer-lib.js  relayer.js  stage-c-settle-b2.js  stage-c-settle.js  verify-onchain.js
contracts/tron/test/: UnicityBridgeVault.test.js  UnicityLock.test.js  conformance.test.js  decode-trailing.test.js  relayer.test.js  verifier.test.js
deployments/nile/: nile-usdt.json
docs/bridge/: BRIDGE_BACK.md  MINT_REASON.md  OPTIMISTIC_UNLOCK.md  ZK_BACK.md  ZK_BACK2.md  ZK_BACK3.md
docs/bridge-slides/: bridge.tex
docs/bridge/dev-plan/: 00-interop-contract.md  02-ts-sdk-and-wallet.md  03-status.md  04-deployment.md  05-cost-analysis.md  06-status.md  07-return-service.md  08-wallet-abstraction.md  README.md  integration.md
docs/dev-plan/: 01-source-chain-contracts.md  03-prover-service.md  04-deployment.md  05-cost-analysis.md  06-status.md  06-wallet-bridge-integration.md  07-return-service.md  README.md  integration.md
docs/spec/: PLUGIN_ARCHITECTURE.md  TRUST_MODELS.md  ZK_BACK3.md
protocol/: interop.md
protocol/vectors/: README.md
protocol/vectors/accumulator/: accumulator-00.json
protocol/vectors/config/: config-00.json
protocol/vectors/lock/: lock-00.json
protocol/vectors/nullifier/: nullifier-00.json
protocol/vectors/reason/: reason-00.json
prover/: Cargo.toml  README.md  run-return-service.sh
prover/crates/core/: Cargo.toml
prover/crates/core/src/: abi.rs  cbor.rs  hash.rs  lib.rs
prover/crates/guest/: Cargo.toml
prover/crates/guest/src/: lib.rs  wire.rs
prover/crates/host/: Cargo.toml
prover/crates/host/examples/: cross_check_live.rs  emit_certified_live_wire.rs  s1_anchored_live.rs
prover/crates/host/src/: fixture.rs  lib.rs  main.rs  s1.rs  s2.rs  sp1.rs
prover/crates/host/tests/: b1_guest.rs  b2_guest.rs  nile_config.rs  s1_aggregator.rs  s1_live.rs  s1_precheck.rs  s2_rebuild.rs  vectors.rs
prover/crates/host/tests/data/: bridge-back-live-sample.json
prover/crates/sdk-ext/: Cargo.toml
prover/crates/sdk-ext/src/: accumulator.rs  bridge.rs  error.rs  lib.rs  trust.rs  verify.rs
prover/crates/sdk-ext/tests/: accumulator_nonmembership.rs
prover/crates/service/: Cargo.toml  README.md
prover/crates/service/src/: api.rs  config.rs  lib.rs  main.rs  prover.rs  queue.rs  sequencer.rs  store.rs  submitter.rs
prover/crates/service/tests/: service_api.rs
prover/deployment/: nile-usdt.json
