[package]
name = "bridge-return-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
sha2 = { version = "0.10", default-features = false }
tiny-keccak = { version = "2", default-features = false, features = ["keccak"] }

[dev-dependencies]
hex = "0.4"
serde_json = "1"

