[package]
name = "bridge-return-guest"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []

[dependencies]
bridge-return-core = { path = "../core", default-features = false, features = ["alloc"] }
unicity-token = { path = "../../../state-transition-sdk-rust", default-features = false, features = ["alloc"] }
