[package]
name = "bridge-return-guest"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
sp1 = ["dep:sp1-zkvm"]

[dependencies]
bridge-return-core = { path = "../core", default-features = false, features = ["alloc"] }
bridge-return-sdk-ext = { path = "../sdk-ext" }
sp1-zkvm = { version = "6.3.1", optional = true, default-features = false, features = ["lib"] }
unicity-token = { git = "https://github.com/unicitynetwork/state-transition-sdk-rust.git", branch = "token-split-2", default-features = false, features = ["alloc"] }

[[bin]]
name = "bridge-return-sp1-guest"
path = "src/bin/sp1.rs"
required-features = ["sp1"]
