[package]
name = "bridge-return-host"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
sp1 = ["dep:sp1-sdk"]

[dependencies]
bridge-return-core = { path = "../core" }
bridge-return-guest = { path = "../guest" }
bridge-return-sdk-ext = { path = "../sdk-ext" }
hex = "0.4"
num-bigint = "0.4"
serde_json = "1"
sp1-sdk = { version = "6.3.1", optional = true, default-features = false, features = ["blocking"] }
thiserror = "1"
unicity-token = { path = "../../../state-transition-sdk-rust", default-features = false, features = ["alloc", "client"] }
