[package]
name = "bridge-return-host"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
sp1 = ["dep:sp1-sdk"]

[dependencies]
bridge-return-core = { path = "../core" }
bridge-return-guest = { path = "../guest" }
bridge-return-sdk-ext = { path = "../sdk-ext" }
hex = "0.4"
num-bigint = "0.4"
serde_json = "1"
# Keep the final BN254 Groth16 step native. In release circuit mode SP1 downloads
# the pre-generated v6.1.0 circuit, proving key, and verification key from its
# public artifact bucket; `native-gnark` removes the otherwise mandatory Docker
# invocation. Never use SP1_CIRCUIT_MODE=dev here: that selects a private dev
# artifact bucket and falls back to generating a circuit-specific proving key.
sp1-sdk = { version = "6.3.1", optional = true, default-features = false, features = ["blocking", "native-gnark"] }
thiserror = "1"
# `std` adds host-only JSON trust-base parsing (RootTrustBase::from_json) for S1.
# The zkVM guest is built by a separate `cargo prove` invocation and stays no_std.
unicity-token = { path = "../../../state-transition-sdk-rust", default-features = false, features = ["std", "alloc", "client"] }
