[package]
name = "bridge-return-sdk-ext"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []

[dependencies]
num-bigint = { version = "0.4", default-features = false }
tiny-keccak = { version = "2", default-features = false, features = ["keccak"] }
unicity-token = { git = "https://github.com/unicitynetwork/state-transition-sdk-rust.git", branch = "token-split-2", default-features = false, features = ["alloc"] }
