[package]
name = "bridge-return-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
sp1 = ["bridge-return-host/sp1"]

[dependencies]
axum = "0.7"
bridge-return-core = { path = "../core" }
bridge-return-guest = { path = "../guest" }
bridge-return-host = { path = "../host" }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "process", "io-util"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
